--- a/.github/workflows/pythonMain.yml
+++ b/.github/workflows/pythonMain.yml
@@ -29,6 +29,13 @@ jobs:
         pip install pyyaml
     - name: Run feed.py
       run: python feed.py
+    - name: git push
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add .
+        git commit -m "modified feed"
+        git push
         #pip install flake8 pytest
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     #- name: Lint with flake8
