--- a/.github/workflows/pythonMain.yml
+++ b/.github/workflows/pythonMain.yml
@@ -16,19 +16,24 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.PERMISSIONTOKEN}}
+   
     - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyyaml
+        
     - name: Run feed.py
       run: python feed.py
+      
     - name: git push
       run: |
         git config user.name jeannieteo
@@ -38,6 +43,7 @@ jobs:
         git push
         #pip install flake8 pytest
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
     #- name: Lint with flake8
       #run: |
         # stop the build if there are Python syntax errors or undefined names
