--- a/.github/workflows/pythonMain.yml
+++ b/.github/workflows/pythonMain.yml
@@ -17,9 +17,10 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
     - uses: actions/checkout@v4
       with:
-        token: ${{ secrets.PERMISSIONTOKEN}}
+        token: ${{secrets.PERMISSIONTOKEN}}
    
     - name: Set up Python 3.10
     - uses: actions/setup-python@v4
