--- a/.github/workflows/pythonMain.yml
+++ b/.github/workflows/pythonMain.yml
@@ -18,12 +18,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
       with:
         token: ${{secrets.PERMISSIONTOKEN}}
    
     - name: Set up Python 3.10
-    - uses: actions/setup-python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: "3.10"
         
